add headline to feature cards

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@ console.log("Logged to console");</code>
     </section>
     <section class="section">
       <div class="container">
+        <h1 class="title has-text-light has-text-centered" id="features">
+          Features
+        </h1>
         <div class="columns is-multiline">
           <div class="column is-4">
             <div class="card">
