--- a/index.html
+++ b/index.html
@@ -58,10 +58,23 @@ console.log("Logged to console");</code>
     </section>
     <section class="section">
       <div class="container">
-        <h1 class="title has-text-light has-text-centered" id="features">
+        <h2 class="title has-text-light has-text-centered" id="features">
           Features
         </h1>
         <div class="columns is-multiline">
+          <div class="column is-4">
+            <div class="card is-dark">
+              <div class="card-content">
+                <div class="content has-text-centered">
+                  <span class="icon is-size-1 has-text-info">
+                    <i>🪶</i>
+                  </span>
+                  <h3 class="title is-4">Lightweight</h3>
+                  <p>&lt;1 KB gzipped vs. ~ 30 KB for jQuery</p>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="column is-4">
             <div class="card">
               <div class="card-content">
@@ -70,7 +83,7 @@ console.log("Logged to console");</code>
                     <i>🔥</i>
                   </span>
                   <h3 class="title is-4">Blazing fast</h3>
-                  <p>Text</p>
+                  <p>Enhanced performance through focused featureset.</p>
                 </div>
               </div>
             </div>
@@ -83,20 +96,7 @@ console.log("Logged to console");</code>
                     <i>🎯</i>
                   </span>
                   <h3 class="title is-4">Focused functionality</h3>
-                  <p>Text</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="column is-4">
-            <div class="card is-dark">
-              <div class="card-content">
-                <div class="content has-text-centered">
-                  <span class="icon is-size-1 has-text-info">
-                    <i>🪶</i>
-                  </span>
-                  <h3 class="title is-4">Lightweight (<1 KB gzipped)</h3>
-                  <p>Text</p>
+                  <p>Only the bare utilities to make life easier</p>
                 </div>
               </div>
             </div>
@@ -104,7 +104,11 @@ console.log("Logged to console");</code>
         </div>
       </div>
     </section>
-
+    <section class="section">
+      <div class="container">
+        <h2 class="title has-text-light">Installation</h1>
+      </div>
+    </section>
     <section class="section">
       <div class="container">
         <h1 class="title has-text-light">NanoJQ</h1>
