feat: Add easy installation instructions to index.html

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@ console.log("Logged to console");</code>
     <section class="section">
       <div class="container">
         <h2 class="title has-text-light">Installation</h1>
+<p class="has-text-light">Easy as cake!</p>
+        <pre><code class="language-html">&lt;script src="https://github.com/MoPaMo/NanoJQ/raw/main/nanojq.min.js"&gt;&lt;/script&gt;</code></pre>
       </div>
     </section>
     <section class="section">
