style: improve code formatting in index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       }
       .code-column pre {
         white-space: pre-wrap;
+        word-break: break-word;
       }
     </style>
   </head>
