--- a/index.html
+++ b/index.html
@@ -218,5 +218,32 @@ $('.toggle-me').toggle();
       }
       runCode();
     </script>
+    <footer class="footer">
+      <div class="content has-text-centered has-text-white">
+        <p>
+          <strong class="has-text-primary">NanoJQ</strong> - A lightweight
+          jQuery-like library
+        </p>
+        <p>
+          <a
+            href="https://github.com/MoPaMo/NanoJQ/"
+            class="has-text-link-light"
+            >GitHub</a
+          >
+          |
+          <a
+            href="https://github.com/MoPaMo/NanoJQ/blob/main/LICENSE.md"
+            class="has-text-link-light"
+            >MIT License</a
+          >
+        </p>
+        <p>
+          Created by
+          <a href="https://github.com/MoPaMo" class="has-text-link-light"
+            >MoPaMo</a
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
